# rust-api-server

./: .env.example  .gitignore  AWS_DEPLOYMENT.md  CLI.md  COLLABORATION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  PERMISSION_INHERITANCE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
aws/: Dockerfile  cloudformation.yml  env.ecs
cli/: Cargo.toml
cli/src/: client.rs  config.rs  error.rs  main.rs  utils.rs
cli/src/aws/: config.rs  ecr.rs  ecs.rs  mod.rs  secret.rs
cli/src/commands/: agent.rs  auth.rs  aws_deploy.rs  config.rs  deploy.rs  mod.rs  project.rs  status.rs
scripts/: migration_v2_collaboration.sql
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/handlers/: agents.rs  analytics.rs  auth.rs  code_analysis.rs  code_review.rs  collaboration.rs  inheritance.rs  mod.rs  projects.rs  team.rs  teams.rs
src/middleware/: mod.rs  rbac.rs
src/middleware_auth/: mod.rs
src/middleware_rbac/: mod.rs
src/models/: collaboration.rs  inheritance.rs  mod.rs
src/services/: agent.rs  ai.rs  analytics.rs  code_analysis.rs  collaboration.rs  inheritance.rs  mod.rs  ot_engine.rs
src/utils/: crypto.rs  jwt.rs  mod.rs  validation.rs
