[package]
name = "compilex7-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for CompileX7 development"
authors = ["CompileX7 Team"]
repository = "https://github.com/compilex7/cli"

[[bin]]
name = "cx7"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
colored = "2.1"
indicatif = "0.17"
dirs = "5.0"
home = "0.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hyper = "0.14"
http = "0.2"
rpassword = "7.2"
futures = "0.3"
async-trait = "0.1"
walkdir = "2.4"
notify = "6.1"
globset = "0.4"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
